# models/v2scrape.go
@@ -8,6 +8,7 @@ type V2ScrapeRequest struct {
 	URLs             []string         `json:"urls,omitempty"`
 	Formats          []string         `json:"formats,omitempty"`
 	OnlyMainContent  bool             `json:"onlyMainContent,omitempty"`
+	OnlyCleanContent bool             `json:"onlyCleanContent,omitempty"`
 	IncludeTags      []string         `json:"includeTags,omitempty"`
 	ExcludeTags      []string         `json:"excludeTags,omitempty"`
 	WaitFor          int              `json:"waitFor,omitempty"` // milliseconds
